updated Tests