@@ -1,7 +1,7 @@
 package junit;
 
 import Controller.CsvImporter;
-import Models.CSVLines;
+import Models.CsvCinematic;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -19,42 +19,40 @@ class CsvImporterTest {
 
     @BeforeEach
     void setUp() throws IOException {
-        csvImporter = new CsvImporter();
         tempFile = File.createTempFile("Test", ".csv");
+        csvImporter = new CsvImporter(tempFile.getAbsolutePath());
     }
 
     @Test
     void testImportDataValid() throws IOException {
-        String validCSVContent = "column1,column2,column3,column4\n" +
-                "value1,value2,value3,value4\n" +
-                "data1,data2,data3\n" +
-                "data1,data2,,data4\n";
+        String validCSVContent = """
+                Title,Type,State,Rating
+                The Fighter,MOVIE,FINISHED,1
+                Up,SERIES,TOWATCH
+                Vice,MOVIE,DROPPED,8
+                """;
 
         writeToFile(validCSVContent);
 
-        List<CSVLines> records = csvImporter.importData(tempFile.getAbsolutePath());
+        List<CsvCinematic> cinematics = csvImporter.importData();
 
-        assertEquals(2, records.size());
-        assertEquals(List.of("value1", "value2", "value3", "value4"), records.get(0).getColumns());
-        assertEquals(List.of("data1", "data2", "data3"), records.get(1).getColumns());
+        assertEquals(3, cinematics.size());
+        assertEquals(List.of("The Fighter", "MOVIE", "FINISHED", 1),List.of(cinematics.getFirst().getTitle(), cinematics.getFirst().getType().toString(), cinematics.getFirst().getState().toString(), cinematics.getFirst().getRating()));
+        assertEquals(List.of("Up", "SERIES", "TOWATCH"), List.of(cinematics.get(1).getTitle(), cinematics.get(1).getType().toString(), cinematics.get(1).getState().toString()));
+        assertEquals(List.of("Vice", "MOVIE", "DROPPED"), List.of(cinematics.get(2).getTitle(), cinematics.get(2).getType().toString(), cinematics.get(2).getState().toString()));
     }
 
     @Test
     void testImportDataInvalid() throws IOException {
-        String invalidCSVContent = "tooFew\n" +
-                "justTwo,columns\n" +
-                "valid1,valid2,valid3\n";
+        String invalidCSVContent = """
+                tooFew
+                justTwo,columns
+                valid1,valid2,valid3
+                """;
 
         writeToFile(invalidCSVContent);
 
-        assertThrows(RuntimeException.class, () -> {
-            List<CSVLines> lines = csvImporter.importData(tempFile.getAbsolutePath());
-        });
-    }
-
-    @Test
-    void testImportData_ExceptionOnFileNotFound() {
-        assertThrows(RuntimeException.class, () -> csvImporter.importData("non_existent_file.csv"));
+        assertThrows(RuntimeException.class, () -> csvImporter.importData());
     }
 
     // help-method that I can write some csv content into a file
